// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when props.location.config={}, props.location.branches={}, and state.isLoading=false renders correctly 1`] = `
<main>
  <Title
    classes={Object {}}
    config={Object {}}
    displayAction={true}
    selectChoice={[Function]}
  />
</main>
`;

exports[`when props={} and state.isLoading=false renders correctly 1`] = `
<Redirect
  push={false}
  to={
    Object {
      "pathname": "/load",
      "search": undefined,
    }
  }
/>
`;

exports[`when props={} renders correctly 1`] = `
<div
  className="Play-progress-1"
>
  <WithStyles(LinearProgress) />
</div>
`;

exports[`with props.location.branches, state.currentBranchId, and state.isLoading=false renders correctly 1`] = `
<main>
  <Title
    classes={Object {}}
    config={Object {}}
    displayAction={false}
    selectChoice={[Function]}
  />
  <Branch
    choices={
      Array [
        Object {
          "Choice text.": "choice",
        },
      ]
    }
    config={Object {}}
    selectChoice={[Function]}
    text="Text."
  />
</main>
`;
